/*
 * $Id$
 */

2009-08-10 18:08 UTC-0400 Teo Fonrouge (teo/at/windtelsoft/dot/com)
MM      bin/run_App.sh
MM      build_bkls.sh
MM      build_pkgs.sh
MM      wxharbour.bkl
MM      wxharbour.spec
        * adding svn:keywords (Author, Id, Date, Revision)
        * adding "Id" tag

2009-08-10 17:53 UTC-0400 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  -  demos/helloworld/helloworld.bkl
  -  samples/arrbrowser/arrbrowser.bkl
  -  samples/dbbrowser/dbbrowser.bkl
  -  samples/menu/menu.bkl
  -  samples/sizers/sizers.bkl
  -  samples/text/text.bkl
     * removed not needed files

2009-08-10 17:35 UTC-0400 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  -  config/harbour-bcc.cfg
  -  config/harbour-mingw.cfg
  -  config/harbour-unix.cfg
  -  config/harbour-vc.cfg
     * removed now unneeded cfg (harbour.cfg) files

  *  config/tmpl_hrb.bkl
     * changed obj dir separator from "-" to "_" on unix toolset
     % Added flag to specify level of the C source output from harbour compiler
       using default "0"
         HBOUTSRCLEVEL=0

  *  config/harbour_bkl.py
  *  config/mkdirstempl.bkl
     * added svn:keywords (Author, Id, Date, Revision)
     * added eol style to native
     * added "Id" tag

  *  demos/dbExplorer/GNUmakefile
  *  demos/dbExplorer/makefile.bcc
  *  demos/dbExplorer/makefile.gcc
  *  demos/dbExplorer/makefile.vc
  *  demos/helloworld/GNUmakefile
  *  demos/helloworld/helloworld.bkl
  *  demos/helloworld/makefile.bcc
  *  demos/helloworld/makefile.gcc
  *  demos/helloworld/makefile.vc
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  *  makefile.wat
  *  samples/arrbrowser/arrbrowser.bkl
  *  samples/arrbrowser/GNUmakefile
  *  samples/arrbrowser/makefile.bcc
  *  samples/arrbrowser/makefile.gcc
  *  samples/arrbrowser/makefile.vc
  *  samples/auinotebook/GNUmakefile
  *  samples/auinotebook/makefile.bcc
  *  samples/auinotebook/makefile.gcc
  *  samples/auinotebook/makefile.vc
  *  samples/bitmapButton/GNUmakefile